--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	      "randallt7zr",
 	      "jozhuatx9e",
 	      "andhiewg7zx",
-        "hongannt44x"
+        "hongannt44x",
+	"kuganesg252a"
       ];
       var randIndex = parseInt(Math.random() * malaysiaReferralCodes.length, 10);
       window.location = `https://www.stashaway.my/referrals/${malaysiaReferralCodes[randIndex]}`;
